Fix deprecation warnings across all modules
- Fix ~80 deprecation warnings from Hibernate 7, Java 21, commons-cli 1.11,
  and DSpace internal API changes across dspace-api, dspace-iiif, dspace-oai,
  dspace-server-webapp, dspace-sword, and dspace-swordv2
- Migrate withWorkflowGroup(int) to withWorkflowGroup(String) in all tests
- Replace deprecated API calls with their modern equivalents